--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ html {
   /* a cada 1rem será considera 10px */
   font-size: 62.5%;
 }
-
 html,
 body {
   height: 100vh;
@@ -293,4 +292,15 @@ MODAL
   width: 100%;
   height: 90%;
   transform: translate(-50%, -50%);
+}
+h1{
+  text-align: center;
+  margin-bottom: 3%;
+}
+h4,h5{
+  text-align: center;
+  margin-bottom: 3%;
+  margin-left: 50%;
+  margin-right: 50%;
+  margin-bottom: 2%;
 }
