--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ h3 {
   font-size: 1.6rem;
   font-weight: 600;
   color: rgb(255, 255, 255);
-  background-color: #4179ce ;
+  background-color: transparent ;
   margin: 15px 0px 0px;
   padding: 12px 30px;
   text-decoration: none;
