--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,8 @@ h3 {
   font-weight: 600;
   color: rgb(255, 255, 255);
   background-color: transparent ;
+  border-width: 2px;
+  border-color: #4179ce;
   margin: 15px 0px 0px;
   padding: 12px 30px;
   text-decoration: none;
