--- a/css/style.css
+++ b/css/style.css
@@ -1,322 +1,342 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
-
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  outline: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    outline: 0;
 }
 
 html {
-  /* a cada 1rem será considera 10px */
-  font-size: 62.5%;
+    /* a cada 1rem será considera 10px */
+    font-size: 62.5%;
 }
+
 html,
 body {
-  height: 100vh;
-  font-family: "Source Sans Pro";
-  text-rendering: optimizelegibility;
-  -webkit-font-smoothing: antialiased;
-  background-color: #111111;
+    height: 100vh;
+    font-family: "Source Sans Pro";
+    text-rendering: optimizelegibility;
+    -webkit-font-smoothing: antialiased;
+    background-color: #111111;
 }
 
 body {
-  font-size: 1.6rem;
+    font-size: 1.6rem;
 }
 
 header {
-  background-color: #4179ce ;
+    background-color: #4179ce;
 }
-header .container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 
-  width: 90%;
-  max-width: 980px;
-  
-  margin: auto;
+header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    max-width: 980px;
+    margin: auto;
 }
 
 header img {
-  width: 150px;
-  margin-left: 20px;
-  padding: 15px 0;
+    width: 150px;
+    margin-left: 20px;
+    padding: 15px 0;
 }
 
 header nav ul {
-  display: flex;
+    display: flex;
 }
 
 header nav ul li {
-  list-style: none;
+    list-style: none;
 }
 
 header nav ul li a {
-  text-decoration: none;
-  color: white;
-  text-transform: uppercase;
-  font-size: 1.4rem; 
-  padding: 2.4rem;
-  transition: all 250ms linear 0s;
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    padding: 2.4rem;
+    transition: all 250ms linear 0s;
 }
 
 header nav ul li a:hover {
-  background: rgba(255,255,255, 0.15)
+    background: rgba(255, 255, 255, 0.15)
 }
 
 h2 {
-  color: rgb(75, 75, 75);
-  font-size: 3.6rem;
-  line-height: 4.6rem;
+    color: rgb(75, 75, 75);
+    font-size: 3.6rem;
+    line-height: 4.6rem;
 }
 
 h3 {
-  color: rgb(75, 75, 75);
-  font-size: 2.8rem;
-  line-height: 3.8rem;
+    color: rgb(75, 75, 75);
+    font-size: 2.8rem;
+    line-height: 3.8rem;
 }
 
 .button {
-  display: inline-block;
-  font-size: 1.6rem;
-  font-weight: 600;
-  color: black;
-  background-color: #4179ce ;
-  margin: 15px 0px 0px;
-  padding: 12px 30px;
-  text-decoration: none;
-  border-radius: 8px;
-  transition: all 150ms linear 0s;
-
+    display: inline-block;
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: black;
+    background-color: #4179ce;
+    margin: 15px 0px 0px;
+    padding: 12px 30px;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: all 150ms linear 0s;
 }
 
 .button:hover {
-  opacity: 0.9;
+    opacity: 0.9;
 }
+
 section.hero {
-  margin: 80px 0;
+    margin: 80px 0;
 }
 
 section.hero .container {
-  width: 90%;
-  max-width: 980px;
-
-  margin: auto;
-
-  display: flex;
+    width: 90%;
+    max-width: 980px;
+    margin: auto;
+    display: flex;
 }
 
 section.hero p {
-  color: gray;
-  font-size: 1.8rem;
-  line-height: 3.2rem;
-  margin: 10px 0px 0px;
+    color: gray;
+    font-size: 1.8rem;
+    line-height: 3.2rem;
+    margin: 10px 0px 0px;
 }
-main {
-  margin-bottom: 80px;
-}
-.cards {
-  width: 90%;
-  max-width: 980px;
-  margin: auto;
 
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 20px;
+main {
+    margin-bottom: 80px;
+}
+
+.cards {
+    width: 90%;
+    max-width: 980px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
 }
 
 .text--medium {
-  font-size: 1.6rem;
-  line-height: 2.6rem;
-  font-weight: 400;
-  color: #ecf0f1;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    font-weight: 400;
+    color: #ecf0f1;
 }
 
 .info {
-  display: flex;
-  align-self: end;
-  align-items: center;
+    display: block;
+    align-self: end;
+    align-items: center;
+}
+
+.beneficios {
+    margin: 0.5em;
+}
+
+.requisito {
+    margin: 0.5em;
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
-  background-color: #4179ce;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-
+    display: flex;
+    flex-direction: column;
+    background-color: #4179ce;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
 }
 
 .card:hover {
-  transform: translateY(-7px);
+    transform: translateY(-7px);
 }
 
 .image {
-  width: 100%;
-  padding-top: 56.25%; /* 16:9 */
-
-  overflow: hidden;
-  position: relative;
+    width: 100%;
+    padding-top: 56.25%;
+    overflow: hidden;
+    position: relative;
 }
 
 .image img {
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .content {
-  margin: 20px;
+    margin: 20px;
+}
+
+.empresa {
+    margin: 0.5em;
 }
 
 .title {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .price {
-  margin-left: auto;
-  padding: 5px 20px;
-  border-radius: 20px;
-  background-color: rgb(75, 75, 75);
-  opacity: 0.4;
-  filter: brightness(90%);
-  color: #fff;
+    margin-left: auto;
+    padding: 5px 20px;
+    border-radius: 20px;
+    background-color: rgb(75, 75, 75);
+    opacity: 0.4;
+    filter: brightness(90%);
+    color: #fff;
 }
 
 .modal-overlay {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 5;
-  background-color: rgba(0, 0, 0, 0.6);
-  opacity: 0;
-  visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    visibility: hidden;
 }
-.modal-overlay.active {
-  opacity: 1;
-  visibility: visible;
-}
-.modal {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  
-  background-color: #fff;
-  
-  width: 95%;
-  height: 95%;
-  
-  margin: 0 auto;
-  padding: 10px;
-  
-  border-radius: 3px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  
-  opacity: 0;
-  overflow-y: auto;
-  visibility: hidden;
-  
-  transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1);
-  transform: scale(1.2);
-}
-.modal .close-modal {
-  position: absolute;
-  cursor: pointer;
 
-  top: 5px;
-  right: 15px;
-  
-  opacity: 0;
-  
-  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
-  transition-delay: 0.3s;
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
 }
+
+.modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    background-color: #fff;
+    width: 95%;
+    height: 95%;
+    margin: 0 auto;
+    padding: 10px;
+    border-radius: 3px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    overflow-y: auto;
+    visibility: hidden;
+    transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+    transform: scale(1.2);
+}
+
+.modal .close-modal {
+    position: absolute;
+    cursor: pointer;
+    top: 5px;
+    right: 15px;
+    opacity: 0;
+    transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+    transition-delay: 0.3s;
+}
+
 .modal .close-modal svg {
-  width: 18px;
-  height: 18px;
+    width: 18px;
+    height: 18px;
 }
+
 .modal .modal-content {
-  opacity: 0;
-  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1);
-  transition-delay: 0.3s;
+    opacity: 0;
+    transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+    transition-delay: 0.3s;
 }
+
 .modal.active {
-  visibility: visible;
-  opacity: 1;
-  transform: scale(1);
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
 }
+
 .modal.active .modal-content {
-  opacity: 1;
+    opacity: 1;
 }
+
 .modal.active .close-modal {
-  transform: translateY(10px);
-  opacity: 1;
+    transform: translateY(10px);
+    opacity: 1;
 }
 
 .video-background {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -99;
-  background-color: #111111;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -99;
+    background-color: #111111;
 }
+
 .video-foreground,
 .video-background iframe {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 90%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 90%;
+    transform: translate(-50%, -50%);
 }
-h1{
-  text-align: center;
-  margin-bottom: 3%;
+
+h1 {
+    text-align: center;
+    margin-bottom: 3%;
 }
-h4,h5{
-  text-align: center;
-  margin-bottom: 3%;
-  margin-left: 50%;
-  margin-right: 50%;
-  margin-bottom: 2%;
+
+h4,
+h5 {
+    text-align: center;
+    margin-bottom: 3%;
+    margin-left: 50%;
+    margin-right: 50%;
+    margin-bottom: 2%;
 }
+
 footer {
-  margin-top: auto;
-  text-align: center;
-  padding: 3.2rem 0 1.6rem;
-  animation: up 0.4s 0.4s backwards;
+    margin-top: auto;
+    text-align: center;
+    padding: 3.2rem 0 1.6rem;
+    animation: up 0.4s 0.4s backwards;
 }
 
 footer::after {
-  content: "Feito com ♥️ por João Júnior";
-  opacity: 0.8;
-  font-size: 1.8rem;
-  color: gray;
+    content: "Feito com ♥️ por João Júnior";
+    opacity: 0.8;
+    font-size: 1.8rem;
+    color: gray;
 }
 
-h2{
-  color:white;
+h2 {
+    color: white;
 }
 
-#seila{
-  color: gray;
+#seila {
+    color: gray;
 }
 
-#vagas{
-  color: white;
+#vagas {
+    color: white;
 }
+
 #linksiniciais {
-  color: black;
-  font-style: bold;
+    color: black;
+    font-style: bold;
+}
+
+p {
+    color: white;
+    font-size: 1em;
+    margin-right: 5%;
 }
